--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -16,14 +16,16 @@ load_models:                                        # Which pretrained models to
     glip: True
     owlvit: False
     tcl: False
-    gpt3_qa: True
-    gpt3_general: True
-    depth: True
-    blip: True
+    gpt3_qa: False
+    gpt3_general: False
+    depth: False
+    blip: False
     saliency: False
     xvlm: True
-    codex: True
+    codex: False
     codellama: False
+    codellama_Q: True
+    llm_query: False
 
 detect_thresholds:                                  # Thresholds for the models that perform detection
     glip: 0.5
@@ -51,22 +53,24 @@ codex:
     temperature: 0.                                 # Temperature for Codex. (Almost) deterministic if 0
     best_of: 1                                      # Number of tries to choose from. Use when temperature > 0
     max_tokens: 512                                 # Maximum number of tokens to generate for Codex
-    prompt: ./prompts/chatapi.prompt                # Codex prompt file, which defines the API. (doesn't support video for now due to token limits)
-    model: gpt-3.5-turbo                            # Codex model to use. [code-davinci-002, gpt-3.5-turbo, gpt-4]. See openai.Model.list() for available models
+    model: codellama_Q
+    codellama_tokenizer_name: 'codellama/CodeLlama-7b-hf' 
+    prompt: ./prompts/api_no_video.prompt
+    extra_context:
 
 # Saving and loading parameters
-save: True                                          # Save the results to a file
+save: False                                          # Save the results to a file
 save_new_results: True                              # If False, overwrite the results file
 results_dir: ./results/                             # Directory to save the results
 use_cache: True                                     # Use cache for the models that support it (now, GPT-3)
-clear_cache: False                                  # Clear stored cache
+clear_cache: True                                   # Clear stored cache
 use_cached_codex: False                             # Use previously-computed Codex results
 cached_codex_path: ''                               # Path to the csv results file from which to load Codex results
 log_every: 20                                       # Log accuracy every n batches
 wandb: False                                        # Use Weights and Biases
 
-blip_half_precision: True                           # Use 8bit (Faster but slightly less accurate) for BLIP if True
-blip_v2_model_type: blip2-flan-t5-xxl               # Which model to use for BLIP-2
+blip_half_precision: False                           # Use 8bit (Faster but slightly less accurate) for BLIP if True
+blip_v2_model_type: blip2-opt-6.7b            # Which model to use for BLIP-2
 
 use_fixed_code: False                               # Use a fixed code for all samples (do not generate with Codex)
 fixed_code_file: ./prompts/fixed_code/blip2.prompt  # Path to the fixed code file
