--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -1,31 +1,32 @@
-multiprocessing: False                              # Run the models and samples in parallel
-path_pretrained_models: './pretrained_models'       # Path to the pretrained models
-execute_code: False                                 # Execute the code after generating it. Only applies to main_batch
+multiprocessing: False                            # Run the models and samples in parallel
+path_pretrained_models: ./pretrained_models       # Path to the pretrained models
+execute_code: True                               # Execute the code after generating it. Only applies to main_batch
 
 dataset:                                            # Dataset configuration
     dataset_name: 'MyDataset'                       # Dataset name
     data_path: 'data'                               # Dataset path
     split: ''                                       # Dataset split. If '', it assumes there is only one split
-    max_samples:                                    # Maximum number of samples to load
+    max_samples: 2                                  # Maximum number of samples to load
     batch_size: 20                                  # Batch size
     start_sample: 0                                 # Start sample index. Only used if max_samples is not None
 
 load_models:                                        # Which pretrained models to load
     maskrcnn: False
     clip: False
-    glip: True
+    glip: True # E* : Default -> True
     owlvit: False
     tcl: False
-    gpt3_qa: False
-    gpt3_general: False
-    depth: False
-    blip: False
+    gpt3_qa: False # E* : Default -> True
+    gpt3_general: True # E* : Default -> True
+    depth: True # E* : Default -> True #MiDaS
+    blip: True # E* : Default -> True
     saliency: False
-    xvlm: True
-    codex: False
+    xvlm: True # E* : Default -> True
+    codex: False # E* : Default -> True
     codellama: False
-    codellama_Q: True
+    codellama_Q: False # New model inserted
     llm_query: False
+    llm_guess: False
 
 detect_thresholds:                                  # Thresholds for the models that perform detection
     glip: 0.5
@@ -53,15 +54,15 @@ codex:
     temperature: 0.                                 # Temperature for Codex. (Almost) deterministic if 0
     best_of: 1                                      # Number of tries to choose from. Use when temperature > 0
     max_tokens: 512                                 # Maximum number of tokens to generate for Codex
-    model: codellama_Q
-    codellama_tokenizer_name: 'codellama/CodeLlama-7b-hf' 
-    prompt: ./prompts/api_no_video.prompt
-    extra_context:
+    prompt: ./prompts/chatapi.prompt                # Codex prompt file, which defines the API. (doesn't support video for now due to token limits)
+    model: gpt-3.5-turbo                            # Codex model to use. [code-davinci-002, gpt-3.5-turbo, gpt-4]. See openai.Model.list() for available models
+    extra_context:                                  # ENEKO 
 
 # Saving and loading parameters
 save: False                                          # Save the results to a file
 save_new_results: True                              # If False, overwrite the results file
-results_dir: ./results/                             # Directory to save the results
+save_codex: False
+results_dir: ./results                              # Directory to save the results
 use_cache: True                                     # Use cache for the models that support it (now, GPT-3)
 clear_cache: True                                   # Clear stored cache
 use_cached_codex: False                             # Use previously-computed Codex results
@@ -74,3 +75,5 @@ blip_v2_model_type: blip2-opt-6.7b            # Which model to use for BLIP-2
 
 use_fixed_code: False                               # Use a fixed code for all samples (do not generate with Codex)
 fixed_code_file: ./prompts/fixed_code/blip2.prompt  # Path to the fixed code file
+
+
