--- a/configs/my_project/config_codex_llama3.3-70b.yaml
+++ b/configs/my_project/config_codex_llama3.3-70b.yaml
@@ -1,6 +1,6 @@
 codex:
-    model: llama31Q
-    model_name: 'meta-llama/Llama-3.1-8B' 
+    model: llama33Q
+    model_name: 'meta-llama/Llama-3.3-70B-Instruct' 
     prompt: ./prompts/api_no_video.prompt
 load_models:
     llama31Q: True
