Arreglos  para ejecutar el codigo

--- a/configs/my_project/disable_models.yaml
+++ b/configs/my_project/disable_models.yaml
@@ -14,7 +14,7 @@ load_models:                                        # Which pretrained models to
     xvlm: False # E* : Default -> True
     codex: False # E* : Default -> True
     codellama: False
-    codellama_Q: True # New model inserted
+    codellama_Q: False # New model inserted
 
 save: False
 save_codex: True
