Evaluando. Cambiar nombres ficheros. Postprocesar2

--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -65,13 +65,15 @@ save_codex: False
 results_dir: ./results                              # Directory to save the results
 use_cache: True                                     # Use cache for the models that support it (now, GPT-3)
 clear_cache: True                                   # Clear stored cache
-use_cached_codex: False                             # Use previously-computed Codex results
-cached_codex_path: ''                               # Path to the csv results file from which to load Codex results
+#use_cached_codex: False                             # Use previously-computed Codex results
+#cached_codex_path: ''                               # Path to the csv results file from which to load Codex results
 log_every: 20                                       # Log accuracy every n batches
 wandb: False                                        # Use Weights and Biases
 
 blip_half_precision: False                           # Use 8bit (Faster but slightly less accurate) for BLIP if True
-blip_v2_model_type: blip2-opt-6.7b             # Which model to use for BLIP-2
+blip_v2_model_type: blip2-flan-t5-xxl             # Which model to use for BLIP-2
+glip_model_type: large
+
 
 use_fixed_code: False                               # Use a fixed code for all samples (do not generate with Codex)
 fixed_code_file: ./prompts/fixed_code/blip2.prompt  # Path to the fixed code file
