--- a/configs/my_project/config_codex_deepseek-Qwen-7b.yaml
+++ b/configs/my_project/config_codex_deepseek-Qwen-7b.yaml
@@ -1,6 +1,6 @@
 codex:
     model: deepSeekQwen7b
     model_name: 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B' 
-    prompt: ./prompts/api_no_video.prompt
+    prompt: ./prompts/benchmarks/gqa-reason.prompt
 load_models:
     deepSeekQwen7b: True
