--- a/configs/my_project/config_codex_llama3.3-70b.yaml
+++ b/configs/my_project/config_codex_llama3.3-70b.yaml
@@ -1,6 +1,6 @@
 codex:
     model: llama33Q
     model_name: 'meta-llama/Llama-3.3-70B-Instruct' 
-    prompt: ./prompts/api_no_video.prompt
+    prompt: ./prompts/benchmarks/gqa.prompt
 load_models:
     llama33Q: True
