--- a/configs/my_project/config_codex_qwen2.5-7b.yaml
+++ b/configs/my_project/config_codex_qwen2.5-7b.yaml
@@ -1,6 +1,6 @@
 codex:
     model: Qwen257b
     model_name: 'Qwen/Qwen2.5-Math-7B' 
-    prompt: ./prompts/benchmarks/gqa.prompt
+    prompt: ./prompts/benchmarks/gqa-new.prompt
 load_models:
     Qwen257b: True
