Create hist models, create sft dataset

--- a/configs/my_project/config_codellama.yaml
+++ b/configs/my_project/config_codellama.yaml
@@ -2,5 +2,7 @@ codex:
     model: codellama
     model_name: 'codellama/CodeLlama-7b-Instruct-hf' 
     prompt: ./prompts/benchmarks/gqa.prompt
+    temperature: 0.6
+    adapter: 
 load_models:
     codellama: True
